# inlay

./: Cargo.toml  Justfile  README.markdown  test.csv
examples/ccsds_primary_header/: README  ccsds.csv  ccsds_row_based.csv
src/: bit_buffer.rs  decode.rs  encode.rs  main.rs  template.rs  types.rs
