[package]
name = "inlay"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.0"
serde_derive = "1.0"
serde = "1.0"
byteorder = "1.3"
structopt = "0.2"
loggerv = "0.7"
log = "0.4"
regex = "1.1"
lazy_static = "1.2"
glob = "0.2"
itertools = "0.5"

[dev-dependencies]
flame = "0.2"
